# icp_covariance

./: CMakeLists.txt  README.md  app.cpp  color.h  config.h  data_generation.cpp  data_generation.h  data_generator.cpp  data_generator.h  finite_rectangle.cpp  finite_rectangle.h  icp_covariance.cpp  icp_covariance.h  image_data_generator.cpp  image_data_generator.h  pcl_alignment.cpp  pcl_alignment.h  time_analysis.cpp  time_analysis.h  utils.cpp  utils.h  visualization.cpp  visualization.h
config/: config.cpp  config.h  config.yaml
